--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Da Kitty Warrior - Journal of a Mom</title>
+    <title>Da Kitty Warrior - Journal of a Mourning Mother</title>
+    <link rel="stylesheet" href="/styles/base.css">
+    
 </head>
 <body>
-    I love my son William!!!
+    <header>
+        <br>
+        <h1>I love my son William 💟</h1>
+    </header>
+    <nav>
+
+    </nav>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
