--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </section>
         </main>
         <footer class="footer">Footer</footer>
-        <script src="scripts/main.js"></script>
+        <script type="module" src="scripts/main.js"></script>
     </div>
 </body>
 </html>
